--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./index.css"></link>
-
+    <link rel="stylesheet" href="index.css"></link>
+    
     <title>Document</title>
 </head>
 <body>
-    <h1>top root</h1>
-    <div id="root">
-        <h1>Karthick is here</h1>
-    </div>
-    <h1>below root</h1>
-    <h1>Hello world</h1>
-    <script src="./App.js"></script>
+    <div id="root"> </div>
+    <script type="module" src="App.js"></script>
 </body>
 </html>
